--- a/.gitmodules
+++ b/.gitmodules
@@ -7,9 +7,9 @@
 [submodule "lib/pattern_time"]
 	path = lib/pattern_time
 	url = https://github.com/andr-ew/pattern_time
-[submodule "lib/yolk"]
-	path = lib/yolk
-	url = https://github.com/andr-ew/yolk
 [submodule "lib/produce"]
 	path = lib/produce
 	url = https://github.com/andr-ew/produce
+[submodule "lib/yolk-lib"]
+	path = lib/yolk-lib
+	url = https://github.com/andr-ew/yolk-lib
