--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "lib/pattern_time_extended"]
 	path = lib/pattern_time_extended
 	url = https://github.com/andr-ew/pattern_time_extended
+[submodule "lib/arqueggiator"]
+	path = lib/arqueggiator
+	url = https://github.com/andr-ew/arqueggiator
