jf_out: row/column affects held keys correctly, patcher: connect, fix random load fail in tune

--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule "lib/keymap"]
 	path = lib/keymap
 	url = https://github.com/andr-ew/keymap
+[submodule "lib/patcher"]
+	path = lib/patcher
+	url = https://github.com/andr-ew/patcher
