nb support probably

--- a/.gitmodules
+++ b/.gitmodules
@@ -19,3 +19,6 @@
 [submodule "lib/patcher"]
 	path = lib/patcher
 	url = https://github.com/andr-ew/patcher
+[submodule "lib/nb"]
+	path = lib/nb
+	url = https://github.com/sixolet/nb.git
